# tabsplanation

./: .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  README.md  environment.yml  environment.yml_  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
docs/source/: api.md  changes.md  conf.py  index.md
experiment_configs/: cf_losses.yaml  classification.yaml  classification.yaml_deprecated  compare_cf_methods.yaml  latent_shift.yaml  path_reg.yaml  path_reg.yaml_deprecated  path_reg_cos.yaml  path_regularization.yaml  validity_losses.yaml  validity_losses.yaml_ideal
old/config/: ae_reconstruction_config.yaml  classification_config.yaml  config.toml  config.yaml
old/data/cake_on_sea/: cake_on_sea.py
old/experiments/: constants.py  experiment.py  models.py
old/experiments/classification/: experiment.py
old/experiments/latent_shift/: experiment.py
old/experiments/latent_shift/plot/: plot.py
src/: config.py  utils.py
src/data/cake_on_sea/: task_create_cake_on_sea.py  task_test_.py  utils.py
src/experiments/: run.py  style.py  task_run.py  utils.py
src/experiments/ae_reconstruction/: README.md  __main__.py  experiment.py  plot.py
src/experiments/cf_losses/: config.yaml  parse_config.py  task_create_plot_data_cf_losses.py  task_plot_cf_losses.py
src/experiments/classification/: task_create_plot_data.py  task_create_plot_data_classification_logits.py  task_create_plot_data_classification_predictions.py  task_create_untrained_model.py  task_plot_classification_logits.py  task_plot_classification_predictions.py  task_train_model.py
src/experiments/compare_cf_path_methods/: README.md  task_create_plot_data_compare_cf_methods.py  task_plot_compare_cf_methods.py  task_plot_compare_cf_methods_auc_l1.py  task_plot_compare_cf_methods_auc_lof.py  task_plot_compare_cf_methods_data_table.py  task_plot_compare_cf_methods_draft.py
src/experiments/latent_shift/: __main__.py  experiment.py  task_create_plot_data_class_2_paths.py  task_plot_class_2_paths.py
src/experiments/latent_shift/plot/: paths.py
src/experiments/path_regularization/: README.md  config.yaml  parse_config.py  task_create_plot_data_path_reg.py  task_create_plot_data_path_regularization.py  task_do.py  task_plot_path_reg.py  task_plot_path_regularization.py  task_train_path_reg_ae.py
src/experiments/path_regularization_cake_on_sea/: task_create_plot_data_path_reg_cos.py  task_plot_path_reg_cos.py  task_train_path_regularized_ae.py
src/experiments/robustness_path_regularization/: config.yaml  parse_config.py  task_create_plot_data_robustness_path_regularization.py  task_plot_robustness_path_regularization.py
src/experiments/shared/: data_map.drawio  default.mplstyle  task_create_cake_on_sea.py  task_train_model.py  utils.py
src/experiments/shared/data/: task_create_cake_on_sea.py  task_download_forest_cover.py  task_download_online_news_popularity.py  task_download_wine_quality.py  task_get_data_module.py  task_preprocess_forest_cover.py  task_preprocess_online_news_popularity.py  task_preprocess_wine_quality.py
src/experiments/validity_losses/: config.yaml  parse_config.py  task_create_plot_data_validity_losses.py  task_do.py  task_plot_validity_losses.py
src/experiments/validity_losses/dirty_scripts/: lambda_progression.py  results.csv
src/tabsplanation/: __init__.py  data.py  explanations.py  metrics.py  types.py
src/tabsplanation/data/cake_on_sea/: cake_on_sea.py  task_create_cake_on_sea.py
src/tabsplanation/experiments/: data_map.drawio  experiment.py  models.py  utils.py
src/tabsplanation/experiments/classification/: __main__.py  experiment.py  task_create_plot.py  task_create_plot_data.py  task_create_untrained_model.py  task_train_model.py
src/tabsplanation/experiments/latent_shift/plot/: plot.py
src/tabsplanation/explanations/: __init__.py  latent_shift.py  latent_shift_new.py  lazy_revise.py  losses.py  nice_path_regularized.py  revise.py
src/tabsplanation/models/: __init__.py  base_model.py  classifier.py
src/tabsplanation/models/autoencoder/: __init__.py  ae.py  base_ae.py  decoder.py  encoder.py  vae.py
src/tabsplanation/models/autoencoder/architectures/: ae.py  base_ae.py  vae.py
src/tabsplanation/models/classifier/: classifier.py
src/tabsplanation/models/normalizing_flow/: __init__.py  nice.py
src/tabsplanation/models/normalizing_flow/coupling_layers/: __init__.py  additive_coupling_layer.py  base_coupling_layer.py
src/tabsplanation/models/normalizing_flow/losses/: __init__.py  gaussian_loss.py  logistic_loss.py
src/tabsplanation/tabsplanation/: classifier.py  data.py  explanations.py  types.py
src/tabsplanation/tabsplanation/autoencoder/architectures/: __init__.py  ae.py  base_ae.py  encoder.py  vae.py
src/tabsplanation_/: __init__.py
tests/: test_import.py  test_losses.py  test_metrics.py
