[build-system]
requires = ["poetry-core", "setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tabsplanation"
version = "0.1.0"
description = "Latent shift applied to tabular data"
authors = ["Auguste Baum <auguste.baum@pm.me>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^1.12.1"
numpy = "^1.23.3"
tqdm = "^4.64.1"
matplotlib = "3.5"
pandas = "^1.5.0"
pythae = "^0.0.8"
ipykernel = "^6.16.0"
tomli = "^2.0.1"
pytorch-lightning = "^1.7.7"
omegaconf = "^2.2.3"
hydra-core = "^1.2.0"
torchtyping = "^0.1.4"
click = "^8.1.3"
pytask = "^0.2.6"

[tool.poetry.group.vscode.dependencies]
ipywidgets = "^8.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipdb = "^0.13.9"

[tool.pytask.ini_options]
paths = "./src"

[tool.setuptools_scm]
write_to = "src/tabsplanation/_version.py"

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.usort.known]
first_party = ["config", "tabsplanation", "data", "experiments"]
