[metadata]
name = tabsplanation
description = A project for ...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/augustebaum/tabsplanation
author = Auguste Baum
author_email = auguste.baum@pm.me
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/augustebaum/tabsplanation
    Documentation = https://github.com/augustebaum/tabsplanation
    Github = https://github.com/augustebaum/tabsplanation
    Tracker = https://github.com/augustebaum/tabsplanation/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/tabsplanation/_version.py
